[package]
name = "tower-sessions-postgres-store"
version = "0.1.1"
edition = "2021"
description = "tower-sessions store backed by tokio-postgres"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.83"
deadpool-postgres = "0.14.0"
rmp-serde = "1.3.0"
thiserror = "1.0.64"
time = "0.3.36"
tokio-postgres = { version = "0.7.12", features = ["with-time-0_3"] }
tower-sessions-core = { version = "0.13.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.7"
http = "1.0"
http-body-util = "0.1"
hyper = "1.0"
time = "0.3.30"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.10.0"
tower-sessions = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
